--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.2.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ru.minusd</groupId>
-    <artifactId>SpringSecurity</artifactId>
+    <groupId>com.bank</groupId>
+    <artifactId>authservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringSecurity</name>
-    <description>SpringSecurity</description>
+    <name>authservice</name>
+    <description>The authorization service provides methods for working with jwt</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -28,10 +28,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 
         <!-- Утилиты -->
         <dependency>
