--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> 
     </parent>
-    <groupId>com.bank</groupId>
+    <groupId>com.t1</groupId>
     <artifactId>authservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>authservice</name>
